--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1205,7 +1205,7 @@ apps/
 │  │  │  └─ index.tsx
 │  │  ├─ ...
 │  │  └─ index.tsx
-│  ├─ eslintrc.js
+│  ├─ eslint.config.mjs
 │  ├─ package.json
 │  └─ tsconfig.json
 ├─ warehouse/
@@ -1240,6 +1240,9 @@ product-manager/
 │  │  ├─ middleware/
 │  │  ├─ types/
 │  │  └─ ...
+│  ├─ dao/
+│  │  ├─ user/
+│  │  └─ ...
 │  ├─ modules/
 │  │   ├── admin/
 │  │   │   ├── account/
@@ -1263,7 +1266,7 @@ product-manager/
 │  │   └─ index.tsx
 │  └─ ...
 ├─ ...
-├─ eslintrc.js
+├─ eslint.config.mjs
 ├─ package.json
 └─ tsconfig.json
 ```
